Add missing licenses and use ImmutableMap#of instead of Map#of
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/unit-tests-fault-localization@35869 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c